components/glitchtip/base/glitchtip-ts-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: glitchtip-tailscale
spec:
  type: ClusterIP
  selector:
    app: glitchtip
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glitchtip-tailscale
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - glitchtip
  defaultBackend:
    service:
      name: glitchtip-tailscale
      port:
        number: 80
